--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "mocha": "^10.0.0",
     "mongoose": "^6.3.3",
     "mongoose-id-validator": "^0.6.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.4",
+    "sharp": "^0.30.4"
   }
 }
